# cavalry

./: .gitignore  .ocamlformat  CLAUDE.md  PLAN.md  README.md  a.cvl  cavalry-web.opam  cavalry.opam  dune-project  example.cav  example.cvl  flake.nix  test.cvl
.githooks/: pre-commit
.github/workflows/: ci.yml
assets/readme-snippets/: EXAMPLES.md  README.md  gen.mjs  package-lock.json  package.json
assets/readme-snippets/snippets/: array-exists.cav  array-fill.cav  booleans.cav  euclidean-division.cav  failing-spec.cav  hoare-triple.cav  recursive-procedure.cav  returning-value.cav  triangle-numbers.cav
bench/: README.md  analyze.py  gen.py  report_template.html  run.sh
cavalry/: dune-project
cavalry/lib/: dune
dev/: dune  print_outline.ml
doc/: dune  index.mld
docs/readme-snippets/: README.md  gen.mjs
docs/readme-snippets/snippets/: array-fill.cav  euclidean-division.cav  triangle-numbers.cav
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/syntaxes/: cavalry.tmLanguage.json
lib/: ast.ml  ast.mli  dune  lexer.mll  parser.mly
src/: arith.ml  arith.mli  ast.ml  ast.mli  compile.ml  compile.mli  dune  hoare.ml  hoare.mli  lexer.mll  main.ml  main.mli  parser.mly  prover.ml
src/ast/: arith.ml  arith.mli  dune  loc.ml  logic.ml  logic.mli  program.ml  program.mli  runtime.ml  runtime.mli  term_pp.ml  term_pp.mli  triple.ml  ty.ml  ty.mli  typecheck.ml  typecheck.mli  var_collection.ml  var_collection.mli  vars.ml  vars.mli
src/ast/parse/: dune  lexer.mll  logic.mly  program.mly  tokens.mly
src/parse/: dune  lexer.mll  logic.mly  program.mly  tokens.mly
src/smt/: arith.ml  arith.mli  driver.ml  dune  hoare.ml  prover.ml  prover.mli
test/: arith.ml  ast.ml  ast.program.ml  bounded.ml  compile.ml  compile_false_spec.cav  compile_overflow.cav  dune  exec_array.cav  exec_array_len.cav  exec_array_proc.cav  exec_comment.cav  exec_div.cav  exec_if.cav  exec_if_noelse.cav  exec_negative.cav  exec_nested_while.cav  exec_proc.cav  exec_short_circuit.cav  exec_unbound.cav  exec_variant.cav  exec_while.cav  integration.ml  machine_int_triage.ml  no_overflow_concrete.cav  overflow_concrete.cav  program.ml  safe.ml  soundness.ml  test.cvl  test_exec.cvl  test_exec_while.cvl  test_verify_false.cvl  test_verify_true.cvl  test_verify_true_if.cvl  test_verify_true_succ_proc.cvl  test_verify_true_while.cvl  type_error_arity.cav  type_error_array_as_scalar.cav  type_error_assign_bool.cav  (+92 more)
test/fuzz/: dune  fuzz.ml
web/: .gitignore  README.md  app.js  dune  e2e-browser.cjs  e2e-node.cjs  gen-examples.cjs  index.html  m0.ml  package-lock.json  package.json  serve.cjs  verifier.ml  verify-core.js
web/src/: highlight-entry.js  z3-entry.js
web/why3data/drivers/: coq-realizations.aux  isabelle-realizations.aux  pvs-realizations.aux  z3_487_ce_batch.drv
