(library
 (name tests)
 (libraries cavalry)
 (inline_tests
  (deps
   exec_if.cav
   exec_while.cav
   verify_false.cav
   verify_true_if.cav
   verify_true_euclid.cav
   verify_true_fib_proc.cav
   verify_true_succ.cav
   verify_true_proc_empty.cav
   verify_true_add_proc.cav
   verify_true_while.cav))
 (preprocess
  (pps ppx_jane ppx_inline_test ppx_assert)))
