(library
 (name tests)
 (libraries cavalry why3)
 (inline_tests
  (deps
   exec_if.cav
   exec_while.cav
   exec_proc.cav
   exec_nested_while.cav
   exec_negative.cav
   exec_unbound.cav
   exec_div.cav
   verify_true_div.cav
   verify_false_div_by_zero.cav
   exec_array.cav
   verify_true_array_write.cav
   verify_true_array_init.cav
   verify_true_array_fill.cav
   verify_true_exists.cav
   verify_false_array_write_oob.cav
   verify_false_array_read_oob.cav
   exec_array_len.cav
   exec_array_proc.cav
   verify_true_array_proc.cav
   verify_false_array_negative_length.cav
   verify_true_array_frame.cav
   verify_true_nested_forall.cav
   verify_true_array_machine_int.cav
   exec_variant.cav
   verify_true_variant.cav
   verify_false_variant.cav
   verify_true_nonterminating_partial.cav
   verify_false_nonterminating_total.cav
   verify_false.cav
   verify_false_inv_entry.cav
   verify_false_proc_ensures.cav
   verify_false_proc_requires.cav
   verify_false_nonlinear.cav
   verify_true_if.cav
   verify_true_euclid.cav
   verify_true_fib_proc.cav
   verify_true_succ.cav
   verify_true_proc_empty.cav
   verify_true_add_proc.cav
   verify_true_variable.cav
   verify_true_while.cav
   verify_true_frame.cav
   verify_true_read_global.cav
   verify_true_disjunction.cav
   verify_true_implication.cav
   verify_true_neq.cav
   verify_true_negative.cav
   verify_true_bigmul.cav
   verify_true_nested_while.cav
   verify_true_if_local_guard.cav
   type_error_if_guard.cav
   type_error_assign_bool.cav
   verify_false_writes_undeclared.cav
   verify_false_loop_unquantified.cav
   compile_overflow.cav
   compile_false_spec.cav
   verify_bounded_succ.cav
   verify_bounded_loop.cav
   verify_unbounded_loop.cav
   verify_boundary_ok.cav
   verify_boundary_overflow.cav
   verify_underflow_ok.cav
   verify_underflow_reject.cav
   verify_bounded_proc.cav
   overflow_concrete.cav
   no_overflow_concrete.cav))
 (preprocess
  (pps ppx_jane ppx_inline_test ppx_assert)))
